Fixed the overlapping hero image

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
 * {
     box-sizing: border-box;
@@ -28,9 +28,9 @@
 }
 
 .logo {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: var(--primary-text);
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .nav-bar > ul {
@@ -41,9 +41,9 @@
 
 .links {
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 18px;
-    margin-left: 15px;
+    margin-left: 30px;
 }
 
 .links > a {
@@ -64,17 +64,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    overflow: hidden;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .hero-text {
-    border: 1px solid blue;
     width: 50%;
-
 }
 
 .hero-image {
     max-height: 100%;
+    overflow: hidden;
 }
 
 .hero-image > img {
@@ -82,5 +82,4 @@
     height: 50%;
     display: block;
     margin: auto 0;
-
 }
